--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
-<!DOCTYPE html>
-
 <html lang="zh-Hant">
-
 <head>
-
   <meta charset="UTF-8"> <!-- 設定編碼，避免亂碼 -->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 手機/電腦都能適配 -->
-
-  <title>我的第一個網頁</title> <!-- 瀏覽器標題列文字 -->
-
+  <title>Android APP 下載頁面</title> <!-- 瀏覽器標題列文字 -->
 </head>
+<body>
+  <h1>Android APP 免費下載</h1> <!-- 頁面主標題 -->
+    <p>Minecraft 下載</p> <!-- 段落文字 -->
+</body>
+</html>
+<html>
+<head>
+    <title>链接按钮</title>
+    <style>
+        .button {
+            /* 基础按钮样式 */
+            display: inline-block; /* 允许设置宽度和高度，并保持内联流 */
+            padding: 0px 0px;
+            text-decoration: none; /* 移除链接下划线 */
+            background-color: #007bff; /* 按钮背景色 */
+            color: white; /* 文本颜色 */
+            border-radius: 5px; /* 圆角 */
+            border: none;
+            cursor: pointer; /* 鼠标悬停时显示指针 */
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+        }
 
+        .button:hover {
+            background-color: #0056b3; /* 悬停时的背景色 */
+        }
+    </style>
+</head>
 <body>
 
-  <h1>哈囉，世界！</h1> <!-- 頁面主標題 -->
-
-  <p>這是一個簡單的 HTML 範例。</p> <!-- 段落文字 -->
-
+    <a href="https://liteapks.com/download/minecraft-11909" class="button" target="_blank">
+        <img src="minecraft-150x150.png" alt="">
+    </a>
 </body>
-
 </html>
