Add class to Android download link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h3>我的功課</h3>
 
                     <ol>
-                        <a href="https://s2131700618-tech.github.io/app-free-download-for-android.github.io/">Android 下載頁面(251229)</a>
+                        <a href="https://s2131700618-tech.github.io/app-free-download-for-android.github.io/" class="homework1">Android 下載頁面(251229)</a>
                     </ol>
                 </section>
             </article>
